tests/baselines/reference/reactNamespaceMissingDeclaration.errors.txt
tests/cases/compiler/reactNamespaceMissingDeclaration.tsx(2,2): error TS2304: Cannot find name 'myReactLib'.


==== tests/cases/compiler/reactNamespaceMissingDeclaration.tsx (1 errors) ====
    // Error myReactLib not declared
    <foo data/>
     ~~~
!!! error TS2304: Cannot find name 'myReactLib'.